--- a/client/styles/_logInScreen.css
+++ b/client/styles/_logInScreen.css
@@ -108,7 +108,7 @@
   width: 100%;
   height: 100%;
   z-index: 3;
-  top: -1.1vh;
+  top: -2.1vh;
 }
 
 .card_hex_big {
@@ -331,7 +331,6 @@
 }
 
 #selection_card {
-  box-shadow: inset 0 0 3vh black;
   height: 100vh;
   width: 48vw;
   background-color: #6b5f44;
@@ -352,13 +351,13 @@
   width: 22vw;
 }
 
-#card_walk_white {
+#card_speed_white {
   background-image: url("../../img/walk_white.svg");
   color: black;
   text-shadow: 0 0 .3vh white, 0 0 .2vh white, 0 0 .4vh white, 0 0 .5vh white, 0 0 .7vh white, 0 0 .6vh white;
 }
 
-#card_walk_black {
+#card_speed_black {
   background-image: url("../../img/walk_black.svg");
   color: white;
   text-shadow: 0 0 .3vh black, 0 0 .2vh black, 0 0 .4vh black, 0 0 .5vh black, 0 0 .7vh black, 0 0 .6vh black;
@@ -376,25 +375,25 @@
   text-shadow: 0 0 .3vh black, 0 0 .2vh black, 0 0 .4vh black, 0 0 .5vh black, 0 0 .7vh black, 0 0 .6vh black;
 }
 
-#card_shield_white {
+#card_protection_white {
   background-image: url("../../img/shield_white.svg");
   color: black;
   text-shadow: 0 0 .3vh white, 0 0 .2vh white, 0 0 .4vh white, 0 0 .5vh white, 0 0 .7vh white, 0 0 .6vh white;
 }
 
-#card_shield_black {
+#card_protection_black {
   background-image: url("../../img/shield_black.svg");
   color: white;
   text-shadow: 0 0 .3vh black, 0 0 .2vh black, 0 0 .4vh black, 0 0 .5vh black, 0 0 .7vh black, 0 0 .6vh black;
 }
 
-#card_heart_white {
+#card_health_white {
   background-image: url("../../img/heart_white.svg");
   color: black;
   text-shadow: 0 0 .3vh white, 0 0 .2vh white, 0 0 .4vh white, 0 0 .5vh white, 0 0 .7vh white, 0 0 .6vh white;
 }
 
-#card_heart_black {
+#card_health_black {
   background-image: url("../../img/heart_black.svg");
   color: white;
   text-shadow: 0 0 .3vh black, 0 0 .2vh black, 0 0 .4vh black, 0 0 .5vh black, 0 0 .7vh black, 0 0 .6vh black;
@@ -424,16 +423,112 @@
   height: 63vh;
   display: flex;
   flex-wrap: wrap;
+  pointer-events: none;
 }
 
 .card_skills .card_tab {
+  background: rgba(168, 149, 107, 0.5);
   width: 50%;
   height: 10.5vh;
   position: relative;
-  top: 0;
   border-right: 0.3vh solid #3a3131;
   border-top: 0.3vh solid #3a3131;
   border-left: 0.3vh solid #3a3131;
+  pointer-events: auto;
+  font-size: 150%;
+  font-weight: 900;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card_skills .selection_list_of_skills {
+  padding-top: .5vh;
+  display: flex;
+  flex-wrap: wrap;
+  flex-flow: column;
+  min-height: min-content;
+  overflow-y: scroll;
+  height: 52.5vh;
+  width: 100%;
+  box-shadow: inset 0 0 3vh black;
+  background: #a8956b;
+  pointer-events: auto;
+}
+
+.card_skills .selection_list_of_skills .card_list_item {
+  display: flex;
+  width: 100%;
+  height: auto;
+  padding: 1%;
+  background-color: #fff0f0;
+}
+
+.card_skills .selection_list_of_skills .card_list_item .img {
+  width: 15%;
+  flex: 1;
+  background-image: url("../img/skull_white.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+
+.card_skills .selection_list_of_skills .card_list_item .roster_description {
+  min-height: 20vh;
+  width: 66%;
+  height: auto;
+  padding: .7%;
+}
+
+.card_skills .selection_list_of_skills .card_list_item .roster_description .roster_abil_name {
+  font-size: 110%;
+  font-weight: 700;
+  letter-spacing: .04vw;
+  flex: 1;
+}
+
+.card_skills .selection_list_of_skills .card_list_item .roster_description .roster_abil_desc {
+  font-size: 100%;
+  font-weight: 400;
+  line-height: 1.25;
+  letter-spacing: -.06vw;
+  height: auto;
+}
+
+.card_skills .selection_list_of_skills .card_list_item .roster_abil_stats {
+  display: flex;
+  width: 15%;
+  flex: 1;
+}
+
+.card_skills .selection_list_of_skills .card_list_item .roster_abil_stats .roster_abil_column {
+  width: 33%;
+}
+
+.card_skills .selection_list_of_skills .card_list_item .roster_abil_stats .roster_abil_column .roster_abil_icon {
+  height: 25%;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+
+.card_skills .selection_list_of_skills .card_list_item .roster_abil_stats .roster_abil_column .roster_abil_number {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 25%;
+}
+
+.card_skills .selection_list_of_skills .card_list_item .roster_abil_stats .roster_abil_column .roster_abil_dist {
+  background-image: url("../img/dist_white.png");
+}
+
+.card_skills .selection_list_of_skills .card_list_item .roster_abil_stats .roster_abil_column .roster_abil_aim {
+  background-image: url("../img/aim_white.png");
+}
+
+.card_skills .selection_list_of_skills .card_list_item .roster_abil_stats .roster_abil_column .roster_abil_hurt {
+  background-image: url("../img/hurt_white.png");
 }
 
 .card_skills .card_list {
@@ -443,6 +538,8 @@
   top: 0;
   left: 0;
   overflow-y: hidden;
+  display: flex;
+  align-items: flex-start;
 }
 
 .skills_unit {
@@ -697,4 +794,8 @@
 .bobo {
   margin: 0 30%;
   margin-top: 4vh;
+}
+
+.card_list_item * {
+  border-radius: 5%;
 }
