--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -1,7 +1,9 @@
+@import url("https://fonts.googleapis.com/css?family=Cardo:500i,500,700&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Cardo', serif;
 }
 
 .hexagon {
