--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -1,8 +1,9 @@
-
+@import url('https://fonts.googleapis.com/css?family=Cardo:500i,500,700&display=swap');
 *{
     margin:0;
     padding:0;
     box-sizing: border-box;
+    font-family: 'Cardo', serif;
     //box-shadow: inset 0 0 3vh black;
     //border:.5px solid red;
 }
