motion ui added

--- a/client/styles/_logInScreen.scss
+++ b/client/styles/_logInScreen.scss
@@ -517,3 +517,4 @@ $white: white;
     .marked_group{
         animation: pulsating_chosen 2.8s forwards infinite;
     }
+    #wronCharWarning{color:red; display:flex;justify-content: center;height:2vh;}
