--- a/client/styles/_logInScreen.css
+++ b/client/styles/_logInScreen.css
@@ -982,3 +982,10 @@
 .marked_group {
   animation: pulsating_chosen 2.8s forwards infinite;
 }
+
+#wronCharWarning {
+  color: red;
+  display: flex;
+  justify-content: center;
+  height: 2vh;
+}
