--- a/client/styles/_logInScreen.css
+++ b/client/styles/_logInScreen.css
@@ -20,7 +20,6 @@
   margin: 1.787vh 0;
   background-size: auto 9.93042vh;
   background-position: center;
-  /* offset-x | offset-y | blur-radius | spread-radius | color */
   border-left: solid 0.7vh #333333;
   border-right: solid 0.7vh #333333;
   padding: 1vh;
@@ -118,7 +117,6 @@
   margin: 3.574vh 0;
   background-size: auto 19.86084vh;
   background-position: center;
-  /* offset-x | offset-y | blur-radius | spread-radius | color */
   border-left: solid 1.4vh #333333;
   border-right: solid 1.4vh #333333;
 }
@@ -201,49 +199,25 @@
   width: 100%;
   box-shadow: inset 0 0 3vh black;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   background-position: center;
 }
 
 .selection_class_banner {
-  background-size: cover;
-  background-position: center;
-  width: 19vh;
-  height: 21vh;
+  width: 25%;
+  height: 0;
+  padding-bottom: 25%;
   z-index: 3;
+}
+
+.selection_champCointajner {
+  width: 25%;
 }
 
 .selection_heroImg {
-  background-size: cover;
-  background-position: center;
-  width: 19vh;
-  height: 21vh;
-  z-index: 3;
   z-index: 2;
-}
-
-.selection_backward {
-  width: 0;
-  height: 0;
-  border-top: 5vh solid transparent;
-  border-bottom: 5vh solid transparent;
-  border-right: 5vh solid #b9d8d4;
-  z-index: 3;
-  top: -5vh;
-  left: 1vh;
-  position: relative;
-}
-
-.selection_backward_frame {
-  transform: scale(1.2);
-  width: 0;
-  height: 0;
-  border-top: 7vh solid transparent;
-  border-bottom: 7vh solid transparent;
-  border-right: 7vh solid #5c4a18;
-  border-left: none;
-  z-index: 2;
+  max-width: 100%;
 }
 
 #selection_guardian:after {
@@ -754,7 +728,6 @@
   margin: 2.55286vh 0;
   background-size: auto 14.18631vh;
   background-position: center;
-  /* offset-x | offset-y | blur-radius | spread-radius | color */
   border-left: solid 1vh #333333;
   border-right: solid 1vh #333333;
   color: black;
@@ -861,7 +834,6 @@
   margin: 2.55286vh 0;
   background-size: auto 14.18631vh;
   background-position: center;
-  /* offset-x | offset-y | blur-radius | spread-radius | color */
   border-left: solid 1vh #333333;
   border-right: solid 1vh #333333;
 }
@@ -934,15 +906,16 @@
 }
 
 .chosen .card_heroImg {
-  background-size: cover;
-  background-position: center;
-  width: 19vh;
-  height: 21vh;
+  width: 25%;
+  height: 0;
+  padding-bottom: 25%;
   z-index: 3;
-  width: 100%;
+  padding-bottom: 25%;
+  z-index: 3;
+  width: 131%;
   top: -4.7vh;
-  left: 0;
-  height: 194%;
+  left: -2vh;
+  height: 196%;
 }
 
 .ch_st {
@@ -988,4 +961,59 @@
   display: flex;
   justify-content: center;
   height: 2vh;
+}
+
+@keyframes card_displayed {
+  0% {
+  }
+  50% {
+    filter: contrast(1.5) blur(1px);
+    transform: scale(1.3);
+  }
+  100% {
+    filter: contrast(1.9) blur(0);
+    transform: scale(1.2);
+  }
+}
+
+@keyframes greyOut {
+  0% {
+    transform: scale(1.2);
+    filter: contrast(1.9);
+  }
+  100% {
+    transform: scale(0.93);
+    filter: contrast(1) grayscale(80%);
+  }
+}
+
+.cardDisplayed {
+  animation: card_displayed 1s forwards;
+}
+
+.cardDeselected {
+  animation: card_displayed 1s reverse;
+}
+
+.greyedOut {
+  animation: greyOut 1s forwards;
+}
+
+@keyframes dechosen {
+  0% {
+    transform: scale(0.93);
+    filter: contrast(1) grayscale(80%);
+  }
+  50% {
+    transform: scale(1.2);
+    filter: contrast(1) grayscale(40%);
+  }
+  100% {
+    transform: scale(1);
+    filter: contrast(1) grayscale(0%);
+  }
+}
+
+.dechosen {
+  animation: dechosen 1s forwards;
 }
