waiting screen building in progress.

--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -134,6 +134,8 @@
   width: 100vw;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
 .shelf:nth-child(odd) {
