--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -160,6 +160,8 @@ $colorFillHex: transparent;
     width:100vw;
     display:flex;
     flex-wrap:wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 
