lobby, name, roster and server spreading the information, roster building screen and waiting screen added. Once all condidionts are met board loads up. and thats about it for now.

--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -90,7 +90,8 @@
 
 #app {
   height: 95vh;
-  width: 147vh;
+  width: 94vw;
+  max-width: 329vh;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
