--- a/client/styles/waiterSegment.css
+++ b/client/styles/waiterSegment.css
@@ -18,6 +18,10 @@
 #spinner1, #spinner2 {
   width: 25vw;
   height: 100vh;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
 .waiter_segment {
@@ -122,6 +126,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  color: #13aae6;
+  text-shadow: 0 0 2px black;
   border: none;
   border-left: 0;
   border-right: 0;
@@ -160,9 +166,9 @@
 
 .loader {
   position: relative;
-  margin: 7.5vh auto;
-  width: 38vh;
-  height: 38vh;
+  margin: 0;
+  width: 30vh;
+  height: 30vh;
   display: block;
   overflow: hidden;
 }
@@ -221,4 +227,77 @@ div:hover {
 
 .loader, .loader * {
   will-change: transform;
+}
+
+.backfield_glow {
+  animation: GlossPulsating-Fishermen 4s infinite alternate;
+}
+
+@keyframes GlossPulsating-Fishermen {
+  0% {
+    background: linear-gradient(to top right, blue 0%, rgba(4, 4, 16, 0.702) 12%, rgba(10, 15, 46, 0.702) 71%), linear-gradient(to bottom left, blue 0%, rgba(4, 4, 16, 0.702) 48%, rgba(10, 15, 46, 0.702) 89%);
+  }
+  50% {
+    background: linear-gradient(to top right, blue 0%, rgba(4, 4, 16, 0.702) 12%, rgba(10, 15, 46, 0.702) 71%), linear-gradient(to bottom left, blue 0%, rgba(4, 4, 16, 0.702) 48%, rgba(10, 15, 46, 0.702) 89%);
+  }
+  53% {
+    background: linear-gradient(to top right, blue 0%, rgba(4, 4, 16, 0.702) 14%, rgba(10, 15, 46, 0.702) 72%), linear-gradient(to bottom left, blue 0%, rgba(4, 4, 16, 0.702) 46%, rgba(10, 15, 46, 0.702) 88%);
+  }
+  56% {
+    background: linear-gradient(to top right, blue 0%, rgba(4, 4, 16, 0.702) 16%, rgba(10, 15, 46, 0.702) 73%), linear-gradient(to bottom left, blue 0%, rgba(4, 4, 16, 0.702) 44%, rgba(10, 15, 46, 0.702) 87%);
+  }
+  59% {
+    background: linear-gradient(to top right, blue 0%, rgba(4, 4, 16, 0.702) 18%, rgba(10, 15, 46, 0.702) 74%), linear-gradient(to bottom left, blue 0%, rgba(4, 4, 16, 0.702) 42%, rgba(10, 15, 46, 0.702) 86%);
+  }
+  62% {
+    background: linear-gradient(to top right, blue 0%, rgba(4, 4, 16, 0.702) 20%, rgba(10, 15, 46, 0.702) 75%), linear-gradient(to bottom left, blue 0%, rgba(4, 4, 16, 0.702) 40%, rgba(10, 15, 46, 0.702) 85%);
+  }
+  65% {
+    background: linear-gradient(to top right, blue 0%, rgba(4, 4, 16, 0.702) 22%, rgba(10, 15, 46, 0.702) 76%), linear-gradient(to bottom left, blue 0%, rgba(4, 4, 16, 0.702) 38%, rgba(10, 15, 46, 0.702) 84%);
+  }
+  68% {
+    background: linear-gradient(to top right, blue 0%, rgba(4, 4, 16, 0.702) 24%, rgba(10, 15, 46, 0.702) 77%), linear-gradient(to bottom left, blue 0%, rgba(4, 4, 16, 0.702) 36%, rgba(10, 15, 46, 0.702) 83%);
+  }
+  71% {
+    background: linear-gradient(to top right, blue 0%, rgba(4, 4, 16, 0.702) 26%, rgba(10, 15, 46, 0.702) 78%), linear-gradient(to bottom left, blue 0%, rgba(4, 4, 16, 0.702) 34%, rgba(10, 15, 46, 0.702) 82%);
+  }
+  74% {
+    background: linear-gradient(to top right, blue 0%, rgba(4, 4, 16, 0.702) 28%, rgba(10, 15, 46, 0.702) 79%), linear-gradient(to bottom left, blue 0%, rgba(4, 4, 16, 0.702) 32%, rgba(10, 15, 46, 0.702) 80%);
+  }
+  77% {
+    background: linear-gradient(to top right, blue 0%, rgba(4, 4, 16, 0.702) 30%, rgba(10, 15, 46, 0.702) 80%), linear-gradient(to bottom left, blue 0%, rgba(4, 4, 16, 0.702) 30%, rgba(10, 15, 46, 0.702) 79%);
+  }
+  80% {
+    background: linear-gradient(to top right, blue 0%, rgba(4, 4, 16, 0.702) 32%, rgba(10, 15, 46, 0.702) 81%), linear-gradient(to bottom left, blue 0%, rgba(4, 4, 16, 0.702) 28%, rgba(10, 15, 46, 0.702) 78%);
+  }
+  82% {
+    background: linear-gradient(to top right, blue 0%, rgba(4, 4, 16, 0.702) 34%, rgba(10, 15, 46, 0.702) 82%), linear-gradient(to bottom left, blue 0%, rgba(4, 4, 16, 0.702) 26%, rgba(10, 15, 46, 0.702) 77%);
+  }
+  84% {
+    background: linear-gradient(to top right, blue 0%, rgba(4, 4, 16, 0.702) 36%, rgba(10, 15, 46, 0.702) 83%), linear-gradient(to bottom left, blue 0%, rgba(4, 4, 16, 0.702) 24%, rgba(10, 15, 46, 0.702) 76%);
+  }
+  86% {
+    background: linear-gradient(to top right, blue 0%, rgba(4, 4, 16, 0.702) 38%, rgba(10, 15, 46, 0.702) 84%), linear-gradient(to bottom left, blue 0%, rgba(4, 4, 16, 0.702) 22%, rgba(10, 15, 46, 0.702) 75%);
+  }
+  88% {
+    background: linear-gradient(to top right, blue 0%, rgba(4, 4, 16, 0.702) 40%, rgba(10, 15, 46, 0.702) 85%), linear-gradient(to bottom left, blue 0%, rgba(4, 4, 16, 0.702) 20%, rgba(10, 15, 46, 0.702) 74%);
+  }
+  90% {
+    background: linear-gradient(to top right, blue 0%, rgba(4, 4, 16, 0.702) 42%, rgba(10, 15, 46, 0.702) 86%), linear-gradient(to bottom left, blue 0%, rgba(4, 4, 16, 0.702) 18%, rgba(10, 15, 46, 0.702) 73%);
+  }
+  92% {
+    background: linear-gradient(to top right, blue 0%, rgba(4, 4, 16, 0.702) 44%, rgba(10, 15, 46, 0.702) 87%), linear-gradient(to bottom left, blue 0%, rgba(4, 4, 16, 0.702) 16%, rgba(10, 15, 46, 0.702) 72%);
+  }
+  94% {
+    background: linear-gradient(to top right, blue 0%, rgba(4, 4, 16, 0.702) 46%, rgba(10, 15, 46, 0.702) 88%), linear-gradient(to bottom left, blue 0%, rgba(4, 4, 16, 0.702) 14%, rgba(10, 15, 46, 0.702) 71%);
+  }
+  96% {
+    background: linear-gradient(to top right, blue 0%, rgba(4, 4, 16, 0.702) 48%, rgba(10, 15, 46, 0.702) 89%), linear-gradient(to bottom left, blue 0%, rgba(4, 4, 16, 0.702) 12%, rgba(10, 15, 46, 0.702) 71%);
+  }
+  98% {
+    background: linear-gradient(to top right, blue 0%, rgba(4, 4, 16, 0.702) 50%, rgba(10, 15, 46, 0.702) 90%), linear-gradient(to bottom left, blue 0%, rgba(4, 4, 16, 0.702) 10%, rgba(10, 15, 46, 0.702) 70%);
+  }
+  100% {
+    background: linear-gradient(to top right, blue 0%, rgba(4, 4, 16, 0.702) 50%, rgba(10, 15, 46, 0.702) 90%), linear-gradient(to bottom left, blue 0%, rgba(4, 4, 16, 0.702) 10%, rgba(10, 15, 46, 0.702) 70%);
+  }
 }
