--- a/client/styles/waiterSegment.scss
+++ b/client/styles/waiterSegment.scss
@@ -116,7 +116,12 @@
     align-items: center;
 }
 #spinner1,#spinner2{
-    width:25vw;height:100vh;
+    width:25vw;
+    height:100vh;
+    display:flex;
+    flex-wrap:wrap;
+    justify-content: center;
+    align-items: center;
 }
 .waiter_segment{
     display:flex;
@@ -142,7 +147,8 @@
     display:flex;
     justify-content: center;
     align-items: center;
-        // color: white;
+         color: rgb(19, 170, 230);
+         text-shadow: 0 0 2px black;
         // background: linear-gradient(0.25turn, darkolivegreen, #636044 20%, #636044 80%, darkolivegreen);
         // border-top: 0.8vw solid #866511;
         // border-bottom: 0.7vw solid #866511;
@@ -196,9 +202,9 @@ $blue: rgba(0, 0, 255, .5);
 
 .loader {
 	position: relative;
-	margin: 7.5vh auto;
-	width: 38vh;
-	height: 38vh;
+	margin: 0;
+	width: 30vh;
+	height: 30vh;
 	display: block;
 	overflow: hidden;
 	div {
@@ -245,3 +251,124 @@ div:hover {
 .loader, .loader * {
 	will-change: transform;
 }
+
+@mixin glowingBackground($name,$dir1,$dir2,$dir3,$dir4,$color1,$color2,$color3,  $timer, $repeat, $direction){
+    @keyframes GlossPulsating-#{$name} {
+        0%{
+            background: 
+                        linear-gradient(to $dir1 $dir2,     $color1 0%,$color2 12%, $color3 71%),
+                        linear-gradient(to $dir3 $dir4,     $color1 0%,$color2 48%, $color3 89%),
+        }
+        50%{
+            background: 
+                        linear-gradient(to $dir1 $dir2,     $color1 0%,$color2 12%, $color3 71%),
+                        linear-gradient(to $dir3 $dir4,     $color1 0%,$color2 48%, $color3 89%),
+        }
+        53%{
+            background: 
+                        linear-gradient(to $dir1 $dir2,     $color1 0%,$color2 14%, $color3 72%),
+                        linear-gradient(to $dir3 $dir4,     $color1 0%,$color2 46%, $color3 88%),
+        }
+        56%{
+            background: 
+                        linear-gradient(to $dir1 $dir2,     $color1 0%,$color2 16%, $color3 73%),
+                        linear-gradient(to $dir3 $dir4,     $color1 0%,$color2 44%, $color3 87%),
+        }
+        59%{
+            background: 
+                        linear-gradient(to $dir1 $dir2,     $color1 0%,$color2 18%, $color3 74%),
+                        linear-gradient(to $dir3 $dir4,     $color1 0%,$color2 42%, $color3 86%),
+        }
+        62%{
+            background: 
+                        linear-gradient(to $dir1 $dir2,     $color1 0%,$color2 20%, $color3 75%),
+                        linear-gradient(to $dir3 $dir4,     $color1 0%,$color2 40%, $color3 85%),
+        }
+        65%{
+            background: 
+                        linear-gradient(to $dir1 $dir2,     $color1 0%,$color2 22%, $color3 76%),
+                        linear-gradient(to $dir3 $dir4,     $color1 0%,$color2 38%, $color3 84%),
+        }
+        68%{
+            background: 
+                        linear-gradient(to $dir1 $dir2,     $color1 0%,$color2 24%, $color3 77%),
+                        linear-gradient(to $dir3 $dir4,     $color1 0%,$color2 36%, $color3 83%),
+        }
+        71%{
+            background: 
+                        linear-gradient(to $dir1 $dir2,     $color1 0%,$color2 26%, $color3 78%),
+                        linear-gradient(to $dir3 $dir4,     $color1 0%,$color2 34%, $color3 82%),
+        }
+        74%{
+            background: 
+                        linear-gradient(to $dir1 $dir2,     $color1 0%,$color2 28%, $color3 79%),
+                        linear-gradient(to $dir3 $dir4,     $color1 0%,$color2 32%, $color3 80%),
+        }
+        77%{
+            background: 
+                        linear-gradient(to $dir1 $dir2,     $color1 0%,$color2 30%, $color3 80%),
+                        linear-gradient(to $dir3 $dir4,     $color1 0%,$color2 30%, $color3 79%),
+        }
+        80%{
+            background: 
+                        linear-gradient(to $dir1 $dir2,     $color1 0%,$color2 32%, $color3 81%),
+                        linear-gradient(to $dir3 $dir4,     $color1 0%,$color2 28%, $color3 78%),
+        }
+        82%{
+            background: 
+                        linear-gradient(to $dir1 $dir2,     $color1 0%,$color2 34%, $color3 82%),
+                        linear-gradient(to $dir3 $dir4,     $color1 0%,$color2 26%, $color3 77%),
+        }
+        84%{
+            background: 
+                        linear-gradient(to $dir1 $dir2,     $color1 0%,$color2 36%, $color3 83%),
+                        linear-gradient(to $dir3 $dir4,     $color1 0%,$color2 24%, $color3 76%),
+        }
+        86%{
+            background: 
+                        linear-gradient(to $dir1 $dir2,     $color1 0%,$color2 38%, $color3 84%),
+                        linear-gradient(to $dir3 $dir4,     $color1 0%,$color2 22%, $color3 75%),
+        }
+        88%{
+            background: 
+                        linear-gradient(to $dir1 $dir2,     $color1 0%,$color2 40%, $color3 85%),
+                        linear-gradient(to $dir3 $dir4,     $color1 0%,$color2 20%, $color3 74%),
+        }
+        90%{
+            background: 
+                        linear-gradient(to $dir1 $dir2,     $color1 0%,$color2 42%, $color3 86%),
+                        linear-gradient(to $dir3 $dir4,     $color1 0%,$color2 18%, $color3 73%),
+        }
+        92%{
+            background: 
+                        linear-gradient(to $dir1 $dir2,     $color1 0%,$color2 44%, $color3 87%),
+                        linear-gradient(to $dir3 $dir4,     $color1 0%,$color2 16%, $color3 72%),
+        }
+        94%{
+            background: 
+                        linear-gradient(to $dir1 $dir2,     $color1 0%,$color2 46%, $color3 88%),
+                        linear-gradient(to $dir3 $dir4,     $color1 0%,$color2 14%, $color3 71%),
+        }
+        96%{
+            background: 
+                        linear-gradient(to $dir1 $dir2,     $color1 0%,$color2 48%, $color3 89%),
+                        linear-gradient(to $dir3 $dir4,     $color1 0%,$color2 12%, $color3 71%),
+        }
+        98%{
+            background: 
+                        linear-gradient(to $dir1 $dir2,     $color1 0%,$color2 50%, $color3 90%),
+                        linear-gradient(to $dir3 $dir4,     $color1 0%,$color2 10%, $color3 70%),
+        }    
+        100%{
+            background: 
+                        linear-gradient(to $dir1 $dir2,     $color1 0%,$color2 50%, $color3 90%),
+                        linear-gradient(to $dir3 $dir4,     $color1 0%,$color2 10%, $color3 70%),
+        }
+    };
+        animation: GlossPulsating-#{$name} $timer $repeat $direction;
+    }
+
+.backfield_glow{
+    @include glowingBackground('Fishermen',top, right,bottom, left,blue,hsla(240, 58%, 4%, 0.702),hsla(233, 63%, 11%, 0.702),4s,infinite,alternate)
+}
+
