--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -139,12 +139,16 @@
   align-items: center;
 }
 
+.elevator {
+  z-index: 3;
+}
+
 .shelf:nth-child(odd) {
-  margin-left: 5vh;
+  margin-right: 5vh;
   color: white;
 }
 
 .shelf:nth-child(even) {
-  margin-right: 5vh;
+  margin-left: 5vh;
   color: white;
 }
