--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -7,6 +7,46 @@
     //box-shadow: inset 0 0 3vh black;
     //border:.5px solid red;
 }
+
+@mixin instaFlex {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@mixin arrow($color,$direction,$size){
+    @if $direction == top {
+        width: 0; 
+        height: 0; 
+        border-left: $size solid transparent;
+        border-right: $size solid transparent;
+        border-bottom: $size solid $color;
+
+    }@else if $direction == left {
+
+        width: 0; 
+        height: 0; 
+        border-top: $size solid transparent;
+        border-bottom: $size solid transparent; 
+        border-right:$size solid $color;
+
+    }@else if $direction == bottom {
+
+        width: 0; 
+        height: 0; 
+        border-left: $size solid transparent;
+        border-right: $size solid transparent;
+        border-top: $size solid $color;
+
+    } @else if $direction == right {
+
+        width: 0; 
+        height: 0; 
+        border-top: $size solid transparent;
+        border-bottom: $size solid transparent;
+        border-left: $size solid $color;
+    }
+}
 //@import 'logInScreen';
 
 $sA: 12;
@@ -22,8 +62,8 @@ $fifive: (.55 / $sA * $viewHeight);
 $hexBorder: (.07 / $sA * $viewHeight);
 $margin: .1vh;//(.1 / $sA * $viewHeight);
 $marginLeft:(5vh);
-$appWidth:94vw;
-$appHeight:95vh;
+$appWidth:79vw;
+$appHeight:86vh;
 $minusQuarterht: 99vh;
 $shelfWidth:160vh;
 $border: ($margin * 5);
@@ -35,89 +75,103 @@ $hexBottom: (-.353553 / $sA * $viewHeight);
 $hexBottomSize: (.098995 / $sA * $viewHeight);
 $hexMinusQuarter: (-.248261 / $sA * 100vh);
 
+@mixin hexagonomicron ($sA) {
+    $viewHeight: 100vh;
+    $one: (1 / $sA * $viewHeight);
+    $hexHeight:(.5774 / $sA * $viewHeight);
+    $half: (.5 / $sA * $viewHeight);
+    $hexMargin:(.1787 / $sA * $viewHeight);
+    $hexBackground: ( .993042 / $sA * $viewHeight);
+    $quarter: (.25 / $sA * $viewHeight);
+    $minusQuarter: (-.25 / $sA * $viewHeight);
+    $fifive: (.55 / $sA * $viewHeight);
+    $hexBorder: (.07 / $sA * $viewHeight);
+    $margin: .1vh;//(.1 / $sA * $viewHeight);
+    $marginLeft:(5vh);
+    $appWidth:147vh;
+    $appHeight:95vh;
+    $minusQuarterht: 99vh;
+    $shelfWidth:160vh;
+    $border: ($margin * 5);
+    $hexTriangleSize: (.7071 / $sA * $viewHeight);
+    $hexTriangleOffsetLeft: (.0764 / $sA * $viewHeight);
+    $hexAfterWidth: (.86 / $sA * $viewHeight);
+    $hexAfterHeight: ( .4965 / $sA * $viewHeight);
+    $hexBottom: (-.353553 / $sA * $viewHeight);
+    $hexBottomSize: (.098995 / $sA * $viewHeight);
+    $hexMinusQuarter: (-.248261 / $sA * 100vh);
+            position: relative;
+            width: $one; 
+            height: $hexHeight;
+            margin: $hexMargin 0;
+            background-size: auto $hexBackground;
+            background-position: center;
+            border-left: solid $hexBorder #333333;
+            border-right: solid $hexBorder #333333;
+            &:after {
+                content: "";
+                position: absolute;
+                top: (.040415 / $sA * $viewHeight);
+                left: 0;
+                width: $hexAfterWidth;
+                height: $hexAfterHeight;
+                z-index: 2;
+                background: inherit;
+            }
+            img{
+                height:($hexHeight + $hexTriangleSize / 1.2);
+                width:$one * 1.05;
+                position:relative;
+                top:($hexMinusQuarter * 1.38);
+                left:($hexMinusQuarter * .36);
+                z-index: 2;
+            }
+            .top, .bottom{
+                position: absolute;
+                z-index: 1;
+                width: $hexTriangleSize;
+                height: $hexTriangleSize;
+                overflow: hidden;
+                -webkit-transform: scaleY(0.5774) rotate(-45deg);
+                -ms-transform: scaleY(0.5774) rotate(-45deg);
+                transform: scaleY(0.5774) rotate(-45deg);
+                background: inherit;
+                left: $hexTriangleOffsetLeft;
+                &:before, &:after{
+                    content: "";
+                    position: absolute;
+                    width: $hexAfterWidth;
+                    height: $hexAfterHeight;
+                    -webkit-transform:  rotate(45deg) scaleY(1.7321) translateY($hexMinusQuarter);
+                    -ms-transform:      rotate(45deg) scaleY(1.7321) translateY($hexMinusQuarter);
+                    transform:          rotate(45deg) scaleY(1.7321) translateY($hexMinusQuarter);
+                    -webkit-transform-origin: 0 0;
+                    -ms-transform-origin: 0 0;
+                    transform-origin: 0 0;
+                    background: inherit;
+                }
+            }
+            .top {
+              top: (-.353553 / $sA * 100vh);
+              border-top: solid $hexBottomSize #333333;
+              border-right: solid $hexBottomSize #333333;
+            }
+            .top:after {
+              background-position: center top;
+            }
+            .bottom {
+              bottom: $hexBottom;
+              border-bottom: solid $hexBottomSize #333333;
+              border-left: solid $hexBottomSize #333333;
+            }        
+            .bottom:after {
+              background-position: center bottom;
+            }
+    }//mixin
 $colorFillHex: transparent;
 .hexagon {
-    position: relative;
-    width: $one; 
-    height: $hexHeight;
-    margin: $hexMargin 0;
-    //background-image: url(../img/Finvarr.png);
-    //background-repeat: no-repeat;
-    background-size: auto $hexBackground;
-    background-position: center;
-    /* offset-x | offset-y | blur-radius | spread-radius | color */
-    //box-shadow: 0 0 2vh rgba(0,0,0,1);
-    border-left: solid $hexBorder #333333;
-    border-right: solid $hexBorder #333333;
-  }
-  .heroImg{
-      height:($hexHeight + $hexTriangleSize / 1.2);
-      width:$one * 1.05;
-      position:relative;
-      top:($hexMinusQuarter * 1.38);//-.248261 / 12 * 138vh
-      left:($hexMinusQuarter * .36);//-.248261 / 12 * 36vh
-      z-index: 2;
-  }
-  .hexTop,
-  .hexBottom {
-    position: absolute;
-    z-index: 1;
-    width: $hexTriangleSize;
-    height: $hexTriangleSize;
-    overflow: hidden;
-    -webkit-transform: scaleY(0.5774) rotate(-45deg);
-    -ms-transform: scaleY(0.5774) rotate(-45deg);
-    transform: scaleY(0.5774) rotate(-45deg);
-    background: inherit;
-    left: $hexTriangleOffsetLeft;
-    //box-shadow: 0 0 2vh rgba(0,0,0,1);
-  }
-  
-  /*counter transform the bg image on the caps*/
-  .hexTop:after,
-  .hexBottom:after {
-    content: "";
-    position: absolute;
-    width: $hexAfterWidth;
-    height: $hexAfterHeight;
-    -webkit-transform:  rotate(45deg) scaleY(1.7321) translateY($hexMinusQuarter);
-    -ms-transform:      rotate(45deg) scaleY(1.7321) translateY($hexMinusQuarter);
-    transform:          rotate(45deg) scaleY(1.7321) translateY($hexMinusQuarter);
-    -webkit-transform-origin: 0 0;
-    -ms-transform-origin: 0 0;
-    transform-origin: 0 0;
-    background: inherit;
-  }
-  
-  .hexTop {
-    top: (-.353553 / $sA * 100vh);
-    border-top: solid $hexBottomSize #333333;
-    border-right: solid $hexBottomSize #333333;
-  }
-  
-  .hexTop:after {
-    background-position: center top;
-  }
-  .hexBottom {
-    bottom: $hexBottom;
-    border-bottom: solid $hexBottomSize #333333;
-    border-left: solid $hexBottomSize #333333;
-  }
-  
-  .hexBottom:after {
-    background-position: center bottom;
-  }
-  
-  .hexagon:after {
-    content: "";
-    position: absolute;
-    top: (.040415 / $sA * $viewHeight);
-    left: 0;
-    width: $hexAfterWidth;
-    height: $hexAfterHeight;
-    z-index: 2;
-    background: inherit;
-  }
+    @include hexagonomicron(15)
+}
 #app{
     height:$appHeight;
     width:$appWidth;
@@ -136,25 +190,27 @@ $colorFillHex: transparent;
 }
 
 #ladder{
-    width:5vh;
-    height:98vh;
+    width:$appWidth;
+    height:5vh;
     margin: 1vh;
+    display:flex;
+    flex-wrap:wrap;
 }
 .ladderBlock{
     border:.5vh solid black;
-    border-bottom:none;
-    width:100%;
-    height:calc((100% / 18.2 ) - 1vh);
+    border-right:none;
+    width:calc((100% / 17.23 ) - 1vw);//calc($appWidth / 22);
+    height:100%;//calc((100% / 18.2 ) - 1vh);
 }
 .block1{
-    border-radius: 50% 50% 0 0;
+    border-radius: 50% 0 0 50%;
 }
 .block11{
-    border-bottom: .5vh solid black;
+    border-right: .5vh solid black;
 }
 .block22{
-    border-bottom:.5vh solid black;
-    border-radius: 0 0 50% 50%;
+    border-right:.5vh solid black;
+    border-radius: 0 50% 50% 0;
 }
 #gameScreen{
     height:100vh;
@@ -163,6 +219,10 @@ $colorFillHex: transparent;
     flex-wrap:wrap;
     justify-content: center;
     align-items: center;
+    padding:0;
+}
+body{
+    display:flex;
 }
 
 
@@ -173,6 +233,7 @@ $colorFillHex: transparent;
 #board{
     display:flex;
     align-items: center;
+    flex-direction:column;
 }
 
 
@@ -224,4 +285,60 @@ $colorFillHex: transparent;
         border-bottom: $size solid transparent;
         border-left: $size solid $color;
     }
+}
+.miniCard{
+    width:10vw;
+    height:100vh;
+    background-color:darkslategrey;
+    @include instaFlex;
+    .list{
+        @include instaFlex;
+        flex-wrap:wrap;
+        width:9vw;
+        height: 93%;
+        margin:0;
+        margin-left:-4vh;
+        padding:0;
+    }
+}
+.smallCard{
+    @include hexagonomicron(13);
+}
+.smallCard:nth-child(odd){
+    margin-left: 1.5vw;
+}
+.smallCard:nth-child(even){
+    margin-left:-1.39vw;
+}
+.puller{
+    background-color:darkslategrey;
+    @include instaFlex;
+    width:7vh;
+    height:7vh;
+    position:relative;
+}
+.pullerCircle{
+    width:5vh;
+    height: 5vh;
+    border-radius:50%;
+    @include instaFlex;
+    background-color: darkturquoise;
+}
+.pullerTriangle.left{
+    @include arrow(goldenrod,right,2.2vh);
+    margin-left:1vh
+}
+.pullerTriangle.right{
+    @include arrow(goldenrod,left,2.2vh);
+    margin-left:-1vh;
+}
+.puller.right{
+    border-radius: 50% 0 0 50%;
+    top:-43vh;
+    left:-3vw;
+}
+.puller.left{
+    border-radius: 0 50% 50% 0;
+    top:-36vh;
+    left:9.5vw;
 }
